Keyframed Render Layers Don't Work as Intended #40764

Closed
opened 2014-06-23 05:11:23 +02:00 by David Brennan · 7 comments

System Information
Operating system and graphics card

Windows 7, 64-bit
Intel i7 CPU

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Blender 2.71 RC2 (and earlier versions)

Short description of error

When Render Layers have their visibility Keyframed, and then a Scene is rendered out as an animation, the Keyframed Render Layers very often will not begin rendering at the appropriate frame, or even render at all. (This only happens when it's rendered as an animation, not when a single frame is rendered.)

For instance, let's say that you have a 1,000 frame animation with two Render Layers. The second Render Layer is not needed until frame #700, and so you Keyframe it at 699 and 700 (to save render time). Well, when you return the next day to see your finished animation frames, you'll see that that second Render Layer was never included in the animation, even at frame 700 and beyond!

This has been a long-time annoyance, dating back to at least 2.68. I just created a sample .Blend of ten frames. In this sample, I noticed that the Bug does not behave entirely as described above. Here, the second Render Layer does actually appear....but still not at the appropriate points when it's been Keyframed.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Attached is a .Blend of just ten frames. The second Render Layer is set to begin at frame #6. However, I just rendered it out two times. Both times, it didn't begin rendering until frame #7, and one time, the second Render Layer actually rendered at frame #1, when it was disabled. So the Bug appears to behave differently each time you render it out. (For me personally, it has always behaved as described above: the Keyframed Render Layers simply never appear at all when it's render as an animation.)

RenderLayerKeyframeBug.blend

**System Information** Operating system and graphics card Windows 7, 64-bit Intel i7 CPU **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) Blender 2.71 RC2 (and earlier versions) **Short description of error** When Render Layers have their visibility Keyframed, and then a Scene is rendered out as an animation, the Keyframed Render Layers very often will not begin rendering at the appropriate frame, or even render at all. (This only happens when it's rendered as an animation, not when a single frame is rendered.) For instance, let's say that you have a 1,000 frame animation with two Render Layers. The second Render Layer is not needed until frame #700, and so you Keyframe it at 699 and 700 (to save render time). Well, when you return the next day to see your finished animation frames, you'll see that that second Render Layer was never included in the animation, even at frame 700 and beyond! This has been a long-time annoyance, dating back to at least 2.68. I just created a sample .Blend of ten frames. In this sample, I noticed that the Bug does not behave entirely as described above. Here, the second Render Layer does actually appear....but still not at the appropriate points when it's been Keyframed. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Attached is a .Blend of just ten frames. The second Render Layer is set to begin at frame #6. However, I just rendered it out two times. Both times, it didn't begin rendering until frame #7, and one time, the second Render Layer actually rendered at frame #1, when it was disabled. So the Bug appears to behave differently each time you render it out. (For me personally, it has always behaved as described above: the Keyframed Render Layers simply never appear at all when it's render as an animation.) [RenderLayerKeyframeBug.blend](https://archive.blender.org/developer/F95310/RenderLayerKeyframeBug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @davidbrennan

Added subscriber: @davidbrennan
Sergey Sharybin was assigned by Bastien Montagne 2014-06-23 09:44:28 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 3bd965bc03

This issue was referenced by 3bd965bc03500c552e043ad7e0eb55853e2b0755

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3bd965bc03.

Closed by commit 3bd965bc03.
Author

Great thanks as always, fellas!

Great thanks as always, fellas!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40764
No description provided.