Fix T40764: Keyframed Render Layers Don't Work as Intended